# Learn-Airflow

./: .gitignore  docker-compose.yml  dockerfile  pyproject.toml
airflow/: airflow.cfg  airflow.db  standalone_admin_password.txt
airflow/dags/: mlops_pipeline.py  welcome_dag.py
